--- a/package.json
+++ b/package.json
@@ -8,14 +8,19 @@
     "start": "next start",
     "export": "next export",
     "build-mobile": "next build && next export && npx cap sync",
-    "lint": "next lint"
+    "lint": "next lint",
+    "electron": "npx cap open @capacitor-community/electron",
+    "ios": "npx cap run ios",
+    "android": "npx cap run android"
   },
   "dependencies": {
+    "@capacitor-community/electron": "^3.0.1",
     "@capacitor/android": "^3.0.1",
     "@capacitor/cli": "^3.0.1",
     "@capacitor/core": "^3.0.1",
     "@capacitor/ios": "^3.0.1",
     "next": "11.0.0",
+    "next-auth": "^3.27.0",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
